welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: value yo is not a member of Int
	for(nb <- 1 yo 6) {
                    ^